--- a/archi-landing-page/src/styles/dropdown.css
+++ b/archi-landing-page/src/styles/dropdown.css
@@ -1,45 +1,105 @@
 .dropdown-cont {
-  margin: 1rem 0;
+  height: 40px;
+  border-radius: 7px;
+  background-color: var(--verde);
   width: 100%;
+  position: relative;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  transition: box-shadow .3s ease-in-out;
+}
+@media(hover){
+  .dropdown-cont:hover{
+    box-shadow: 0 0 5px 0 var(--verde);
+  }
 }
 .dropdown-icon {
   margin: 0.3rem 0;
   width: 100%;
   display: flex;
+  justify-content: center;
   align-items: center;
 }
-.dropdown-icon hr {
-  margin: 1rem 0;
+
+.arrow-icon{
+  transition: all .5s ease-in-out;
 }
-.arrow-icon {
-  margin: 0 0.4rem 0 0;
-}
-.arrow-icon * {
-  cursor: pointer;
+/*Efecto de rotacion en el icono*/
+.rotate-i{
+  transform: rotate(180deg);
 }
 .drop-paran {
+  width: 80%;
   font-size: small;
+  font-weight: 700;
 }
-.list-webs-link {
-  display: flex;
-  flex-direction: column;
-  gap: 0.3rem;
-  grid-template-columns: 1fr;
-  transition:0.6s ease-in-out;
-}
+
+/*contenedor desplegable*/
 .list-cont{
-  overflow: hidden;
+  position: absolute;
+  width: 100%;
+  height: 0px;
+  top: 50%;
+  z-index: 2;
+  transform: translateY(-20px);
+  opacity: 0;
+  transition: all 0.6s ease-in-out;
+  border-radius: 10px;
 }
-.list-webs-link a {
+/*contenedor interno*/
+.list-webs-link {
+  display: grid;
+  grid-template-columns: repeat(3,1fr);
+  place-items: center;
+  gap: 0.5rem;
+  background-color: var(--fondo);
+  border: solid 1px var(--verde);
+  border-radius: 10px;
+  padding: 0.8rem;
+}
+.item-drop-anchor {
+  width: 100%;
+  text-decoration: none;
   color: aliceblue;
 }
-
-.hidden-drop {
-  transform: translateY(-200px);
-  opacity: 0;
+.img-item-drop-anchor{
+  border-radius: 5px;
+  width: 100%;
+  transition: transform .3s ease-in-out;
 }
-.show-drop {
+@media(hover){
+  .img-item-drop-anchor:hover{
+    transform: translateY(-3px);
+  }
+}
 
+
+/*efectos al desplegar el Dropdown*/
+.show-drop {
+  height: auto;
   transform: translateY(0px);
   opacity: 1;
+}
+@media(hover){
+  .show-drop:hover{
+    box-shadow: 0 0 10px 0 var(--verde);
+  }
+}
+
+
+/*responsive*/
+@media(width < 700px){
+  .list-cont{
+    /* margin-top: 0.3rem;
+    position: absolute;
+    width: 60%;
+    left: 40%;
+    top: 100%;
+    overflow: hidden;
+    transition:0.6s ease-in-out;
+    z-index: 2; */
+    width: 100%;
+    left: 0%;
+  }
 }
