--- a/archi-landing-page/src/styles/footer.css
+++ b/archi-landing-page/src/styles/footer.css
@@ -1,46 +1,194 @@
-.footer{
-    margin-top: 6rem;
-    border-top: solid 0.1px #fff;
-    width: 100%;
-    color: aliceblue;
-    background-color: #0f0f0f;
+.footer {
+  position: relative;
+  margin-top: 6rem;
+  width: 100%;
+  min-height: 40vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: aliceblue;
+  background-color: #0f0f0f;
 }
-.ul-contact{
-    list-style: none;
-    padding: 1rem 0 1rem 2rem;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
+.ul-cont-footer {
+  width: 80%;
+  display: flex;
+  justify-content: space-evenly;
+  gap: 2rem;
 }
-.ul-contact li a{
-    text-decoration-line: none;
-    color: aliceblue;
-    display: flex;
-    align-content: center;
-    gap: 0.4rem;
+.ul-footer {
+  list-style: none;
+  width: 35%;
+  display: flex;
+  flex-direction: column;
+  gap: 2.4rem;
 }
-.copy{
+.h3-footer {
+  width: 100%;
+  border-bottom: solid 2px var(--violeta);
+}
+.ul-footer li{
+  display: flex;
+  align-items: center;
+}
+.ul-footer li a {
+  text-decoration-line: none;
+  color: aliceblue;
+  display: flex;
+  align-content: center;
+  gap: 0.4rem;
+}
+/*nav footer*/
+.icon-nav-footer {
+  width: 60%;
+  display: flex;
+  flex-direction: column;
+  gap: 1.2rem;
+}
+.anchor-nav-footer {
+  display: flex;
+  color: var(--texto);
+  font-size: 30px;
+  position: relative;
+}
+._wsp::after {
+  content: "Hablanos por whatsApp";
+  position: absolute;
+  top: 0;
+  left: 20%;
+  width: 0%;
+  height: 100%;
+  font-size: small;
+  font-weight: 800;
+  color: transparent;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 20px;
+  background-color: var(--verde);
+  transition: all 0.5s ease-in-out;
+}
+._ig::after {
+  content: "Siguenos en instagram";
+  position: absolute;
+  top: 0;
+  left: 20%;
+  width: 0%;
+  height: 100%;
+  font-size: small;
+  font-weight: 800;
+  color: transparent;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 20px;
+  background-color: var(--violeta);
+  transition: all 0.5s ease-in-out;
+}
+@media (hover) {
+  ._wsp:hover::after {
+    color: var(--fondo);
     width: 100%;
-    background-color: #817b7b;
-    font-size: 0.7rem;
+  }
+  ._ig:hover::after {
+    color: var(--texto);
+    width: 100%;
+  }
+}
+/*neslatter*/
+.newslatter {
+  width: 100%;
+  display: flex;
+  gap: 1rem;
+}
+.newslatter input,
+button {
+  outline: none;
+  border: none;
+  border-radius: 6px;
+  height: 35px;
+  transition: 0.3s ease-in-out;
+}
+.newslatter input {
+  width: 70%;
+  padding: 0 0.4rem;
+  transition-property: box-shadow;
+}
+.newslatter button {
+  width: 30%;
+  cursor: pointer;
+  background-color: var(--violeta);
+  color: var(--texto);
+  font-weight: 500;
+  transition-property: background;
+}
+.newslatter input:focus {
+  box-shadow: 0 0 5px 0 var(--texto);
+}
+@media (hover) {
+  .newslatter button:hover {
+    background-color: var(--violeta-mate);
+  }
+  .newslatter input:hover {
+    box-shadow: 0 0 5px 0 var(--texto);
+  }
+}
+.newslatter-p{
+    font-size: smaller;
+}
+
+.copy {
+  width: 100%;
+  height: 3rem;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  background-color: #0f0f0f;
+  border-top: solid 0.5px var(--verde);
+  font-size: 0.8rem;
 }
 /*Responsive*/
-@media(width < 860px){
-    .ul-contact{
-        font-size: medium;
+@media (width < 970px) {
+    .footer{
+        padding: 3rem 0 0 0;
     }
-    .copy{
-        font-size: 0.5rem;
-        padding: 0.1rem;
+    .ul-cont-footer{
+        flex-direction: column;
+        padding: 0 0 2rem 0;
+    }
+  .ul-footer {
+    width: 100%;
+    font-size: medium;
+  }
+  .copy {
+    font-size: 0.5rem;
+    padding: 0.1rem;
+  }
+
+    ._ig::after,._wsp::after{
+        width: 100%;
+    }
+    ._ig::after{
+        color: var(--texto);
+    }
+    ._wsp::after{
+        color: var(--fondo);
     }
 }
-@media(width < 470px){
-    .ul-contact{
-        font-size: small;
-    }
-    .copy{
-        font-size: 0.4rem;
-        padding: 0.1rem;
-    }
+@media (width < 470px) {
+  .ul-footer {
+    font-size: small;
+  }
+  .newslatter{
+    flex-direction: column;
+  }
+  .newslatter input{
+    width: 100%;
+  }
+  .newslatter button{
+    width: 50%;
+  }
+  .copy {
+    font-size: 0.4rem;
+    padding: 0.1rem;
+  }
 }
