--- a/archi-landing-page/src/styles/nav-bar.css
+++ b/archi-landing-page/src/styles/nav-bar.css
@@ -1,80 +1,87 @@
-.nav-cont{
-    width: 100%;
-    min-height: 5rem;
-    border-bottom: solid 0.5px #fff;
-    backdrop-filter: blur(3px);
-    position: fixed;
-    top: 0;
-    left: 0;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    z-index: 2;
+.nav-cont {
+  position: sticky;
+  top: 0;
+  left: 0;
+  width: 100%;
+  min-height: 5rem;
+  border-bottom: solid 0.5px var(--texto);
+  box-shadow: 0 0 6px 0 var(--texto);
+  backdrop-filter: blur(5px);
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  z-index: 2;
 }
-.logo-cont{
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    /* padding-left: 4rem; */
-    /* width: 100%; */
-    margin-left: 4rem;
+.logo-cont {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  margin-left: 4rem;
 }
-.logo-svg{
-    width: 4.3rem;
-    transform: rotate(90deg);
+.logo-svg {
+  width: 150px;
 }
-.anchor-nav *{
-    font-size: 2rem;
+.anchor-nav * {
+  font-size: 2rem;
 }
 
-
-.btn-cont{
-    /* width: 100%; */
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    gap: 4rem;
-    margin-right: 4rem;
+.btn-cont {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  gap: 4rem;
+  margin-right: 4rem;
 }
 
 .anchor-nav {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 100px;
+  color: var(--texto);
+  display: flex;
+  width: 35px;
+  height: 35px;
+  justify-content: center;
+  align-items: center;
+  border-radius: 100px;
+  background: transparent;
+  transition-property: box-shadow background transform;
+  transition: 0.3s ease-in-out;
 }
 
-@media(hover){
-    .anchor-nav:hover{
-        transition: all 0.3s ease-in-out;
-        box-shadow: 0 0 30px 0 #ffffff;
-    }
+@media (hover) {
+  .anchor-nav:hover {
+    background: var(--texto-glass);
+    transform: scale(1.2);
+    box-shadow: 0 0 14px 0 var(--texto);
+  }
 }
 
 /*responsive*/
-@media(width < 930px){
-    .btn-cont{
-        gap: 3rem;
-    }
-    .anchor-nav *{
-        font-size: 1.6rem;
-    }
-    .logo-svg{
-        width: 3.5rem;
-    }
+@media (width < 930px) {
+  .btn-cont {
+    gap: 3rem;
+  }
+  .anchor-nav * {
+    font-size: 1.9rem;
+  }
+  .logo-svg {
+    width: 120px;
+  }
 }
-@media(width < 780px){
-    .nav-cont{
-        position: absolute;
-    }
+@media (width < 780px) {
+  .nav-cont {
+    position: absolute;
+  }
+  .logo-cont {
+    margin-left: 1rem;
+  }
+  .btn-cont {
+    gap: 2rem;
+    margin-right: 0.5rem;
+  }
 }
-@media(width < 400px){
-    .btn-cont{
-        gap: 1.3rem;
-    }
-    .anchor-nav *{
-        font-size: 1.3rem;
-    }
+@media (width < 400px) {
+  .btn-cont {
+    gap: 1.3rem;
+  }
+  .anchor-nav * {
+    font-size: 1.7rem;
+  }
 }
-
-
-
