--- a/archi-landing-page/src/styles/wsp-icon-fixed.css
+++ b/archi-landing-page/src/styles/wsp-icon-fixed.css
@@ -3,29 +3,26 @@
     top: 80%;
     right: 2%;
     border-radius: 100px;
-    /* padding: 0.5rem; */
     display: flex;
     justify-content: center;
     align-items: center;
+    transition-property: box-shadow background;
+    background-color: transparent;
+    transition: 0.3s ease-in-out;
  }
  .wsp2 *{
    font-size: 3rem;
  }
  @media(hover){
    .wsp2:hover{
-      transition: all 0.3s ease-in-out;
-      box-shadow: 0 0 20px 0 #62db62;
+      background-color: var(--verde-glass);
+      box-shadow: 0 0 16px 0 var(--verde);
    }
  }
  /*resposive*/
 @media(width < 770px){
    .wsp2 *{
-      font-size: 2rem;
-   }
-}
-@media(width < 470px){
-   .wsp2 *{
-      font-size: 1.7rem;
+      font-size: 2.3rem;
    }
 }
 
